  md5:063b1024d68e26716b7f38caf958316f. That is, the ``original'' sequence ID is
  kept after the MD5 hash.
- `gt genomediff` tool has changed options and improved performance.
- Added tools for compression of short reads (with quality, fastq) either
  direct: tool `gt compreads compress` or using a reference genome: tool `gt
  compreads refcompress`.


changes in version 1.4.1 (2012-04-12)

- the GFF3 parser now handles children which are defined before their parents
- many small improvements to the GFF3 parser


changes in version 1.4.0 (2012-04-02)

- bugfixes and cleanups
- the tool `gt mutate` has been renamed to `gt seqmutate`. The same
  functionality is still available with `gt mutate` in order not to break
  existing scripts.
- `gt extractfeat` has new options -seqid and -target
- `gt suffixerator` has new options -lcpdist, -genomediff
- `gt readjoiner' toolbox added for sequence assembly
- `gt encseq encode' has new option -lossless
- `gt gff3 -tidy' recognizes and fixes more GFF3 errors
- test suite is now multithreaded
- added GtSamAlignment, GtSamfileIterator for SAM/BAM access
- added GtHuffman*, GtGolomb*, GtEliasGamma* for integer encoding
- added GtBit{In,Out}Stream
- further optimizations in GtEncseq
- ensure compatibility with GCC >=4.6 (as in Ubuntu oneiric)
- BSD-licensed implementation is now used in GtRBTree
- added GtRMQ class for efficient range minimum queries


changes in version 1.3.9 (2011-07-02)

- various bugfixes and cleanups
- fix option -translate in `gt extractfeat` tool
- mirroring and seqnum/filenum support added for gtruby/gtpython


changes in version 1.3.8 (2011-06-16)

- bugfixes and cleanups
- GtEncseq completed, Lua bindings added
- `gt encseq` toolbox added for encoded sequence handling
- `gt suffixerator` and `gt packedindex mkindex` have new option -memlimit
- `gt bed_to_gff3` has new options -o, -gzip, -bzip2 and -force
- `gt gtf_to_gff3` has new options -o, -gzip, -bzip2 and -force